build/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
  namespace: hello
spec:
  selector:
    app: hello-kubernetes  # ties this service in with the pods
  ports:
    - name: http
      protocol: TCP
      port: 80          # container port
      targetPort: 80    # service port

---
