build/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ${app_name}-destinationrule
  namespace: hello
spec:
  host: hello-kubernetes
  subsets:
  - name: live
    labels:
      app: ${app_name}
      version: ${app_version}
