build/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-kubernetes-virtual-service
  namespace: hello
spec:
  hosts:
  - "*"
  gateways:
  - hello-kubernetes-gateway
  http:
  - route:
    - destination:
        host: hello-kubernetes
        subset: live
      weight: 100
